# btf2wit

./: .gitignore  Cargo.toml  README.md
examples/: .gitignore  Makefile  simple.c
examples/simple/: host.c  host.h  host.rs
src/: gen.rs  main.rs
src/btf_types/: mod.rs
src/tests/: mod.rs  nested-array-out.txt
