[package]
name = "btf2wit"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
btfdump = "0.0.1"
clap = { version = "4.1.4", features = ["derive"] }
memmap = "0.7.0"
object = "^0.11.0"
