[package]
name = "btf2wit"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Convert btf info to wit info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
btfdump = { git = "https://github.com/anakryiko/btfdump", rev = "d9587c38" }
clap = { version = "4.1.4", features = ["derive"] }
memmap = "0.7.0"
object = "^0.11.0"
